correct image margin position on station pages correct repere being illegible on access category

--- a/stationstyles.css
+++ b/stationstyles.css
@@ -263,6 +263,10 @@ a {
     background-color: white;;
 }
 
+.blue-box .repere {
+	background-color: unset;
+}
+
 .ptinteret {
 	background-color: #6e4823 !important;
 	border-radius: 5px;
